--- a/adipurdila/contact-form.html
+++ b/adipurdila/contact-form.html
@@ -31,7 +31,7 @@
         background-color: #f7f8f8;
         display: flex;
         justify-content: center;
-        align-items:flex-start;
+        align-items: flex-start;
         padding-top: 60px;
       }
 
@@ -43,14 +43,15 @@
         padding: 46px;
       }
 
-      .logo, h1 {
-        margin-bottom: 2rem;
+      .logo,
+      h1 {
+        margin-bottom: 1.5rem;
       }
 
       h1 {
         font-weight: 900;
         font-size: 2rem;
-        color: #132A3B;
+        color: #132a3b;
       }
 
       label {
@@ -61,18 +62,41 @@
         letter-spacing: 1px;
         margin-top: 2rem;
         margin-bottom: 8px;
-        color: #132A3B;
+        color: #132a3b;
       }
 
-      input, textarea, select {
+      input,
+      textarea,
+      select {
         display: inline-block;
         width: 100%;
         resize: none;
-        background-color: #F3F4F5;
+        background-color: #f3f4f5;
         border: none;
         padding: 1rem;
         font-size: 18px;
         border-radius: 8px;
+      }
+
+      select {
+        background-image: url("images/contact-form/arrow-down.svg");
+        background-repeat: no-repeat;
+        background-position: calc(100% - 1.5rem);
+        appearance: none;
+      }
+
+      .btn {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        padding: 22px;
+        background-color: #3589d2;
+        color: #ffffff;
+        font-weight: 700;
+        text-decoration: none;
+        letter-spacing: 1px;
+        border-radius: 8px;
+        margin-top: 1.5rem;
       }
     </style>
   </head>
@@ -82,7 +106,11 @@
 
       <div class="card">
         <div class="container">
-          <img src="images/contact-form/envelope.svg" alt="envelope-bulk" class="logo" />
+          <img
+            src="images/contact-form/envelope.svg"
+            alt="envelope-bulk"
+            class="logo"
+          />
           <h1>Let's get in touch</h1>
           <form action="#" method="post">
             <div>
@@ -119,7 +147,7 @@
                 name="contact-message"
                 id="contact-message"
                 cols="30"
-                rows="10"
+                rows="8"
                 placeholder="Hey, I'd like to get in touch with your sales department regarding a possible collaboration"
               ></textarea>
             </div>
