finish dashboard-varian.html

--- a/adipurdila/dashboard.html
+++ b/adipurdila/dashboard.html
@@ -93,6 +93,10 @@
         color: #70caa3;
       }
 
+      .red {
+        color: #db7783;
+      }
+
       .btn {
         display: flex;
         justify-content: center;
@@ -152,11 +156,11 @@
             <div class="card">
               <img
                 class="logo"
-                src="images/dashboard/icon-money.svg"
+                src="images/dashboard/icon-sales.svg"
                 alt="Icon Money"
               />
-              <h3>$4,502</h3>
-              <p class="main-title">Earned this month</p>
+              <h3>22</h3>
+              <p class="main-title">New Sales</p>
               <div class="wrapper-remarks">
                 <p class="remarks">
                   <span class="green"
@@ -164,13 +168,13 @@
                       src="images/dashboard/icon-arrow-green.svg"
                       alt="arrow-green"
                     />
-                    +6.05%</span
+                    +16.64%</span
                   >
                   than last month
                 </p>
               </div>
               <button class="btn">
-                <div class="text">Earnings</div>
+                <div class="text">Sales</div>
                 <div class="btn-icon">
                   <img src="images/dashboard/icon-arrow-right.svg" alt="" />
                 </div>
@@ -184,22 +188,22 @@
                 src="images/dashboard/icon-money.svg"
                 alt="Icon Money"
               />
-              <h3>$4,502</h3>
-              <p class="main-title">Earned this month</p>
+              <h3>7</h3>
+              <p class="main-title">New Comments</p>
               <div class="wrapper-remarks">
                 <p class="remarks">
-                  <span class="green"
+                  <span class="red"
                     ><img
-                      src="images/dashboard/icon-arrow-green.svg"
+                      src="images/dashboard/icon-arrow-red.svg"
                       alt="arrow-green"
                     />
-                    +6.05%</span
+                    -19%</span
                   >
                   than last month
                 </p>
               </div>
               <button class="btn">
-                <div class="text">Earnings</div>
+                <div class="text">Comments</div>
                 <div class="btn-icon">
                   <img src="images/dashboard/icon-arrow-right.svg" alt="" />
                 </div>
