finish dashboard-varian.html

--- a/adipurdila/dashboard.html
+++ b/adipurdila/dashboard.html
@@ -185,8 +185,8 @@
             <div class="card">
               <img
                 class="logo"
-                src="images/dashboard/icon-money.svg"
-                alt="Icon Money"
+                src="images/dashboard/icon-chat.svg"
+                alt="Icon Chat"
               />
               <h3>7</h3>
               <p class="main-title">New Comments</p>
@@ -195,7 +195,7 @@
                   <span class="red"
                     ><img
                       src="images/dashboard/icon-arrow-red.svg"
-                      alt="arrow-green"
+                      alt="arrow-red"
                     />
                     -19%</span
                   >
