--- a/adipurdila/header.html
+++ b/adipurdila/header.html
@@ -38,9 +38,7 @@
         width: 880px;
         background-color: white;
         border-radius: 6px;
-        box-shadow: 0px 10px 15px -1px rgba(0, 0, 0, 0.1),
-          -10px 10px 15px -1px rgba(0, 0, 0, 0.1),
-          10px 10px 15px -1px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 10px 15px -1px rgba(0, 0, 0, 0.1);
       }
 
       .nav-bar {
