--- a/adipurdila/hero.html
+++ b/adipurdila/hero.html
@@ -16,11 +16,10 @@
     />
 
     <style>
-      /* Global style */
       * {
-        box-sizing: border-box;
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
       }
 
       body {
@@ -28,239 +27,160 @@
         font-size: 16px;
       }
 
-      .learn {
-        background-color: #f7f8f8;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .container {
-        padding: 3rem;
-        width: 100%;
-        background-color: white;
-        border-radius: 6px;
-        box-shadow: 0px 10px 15px -1px rgba(0, 0, 0, 0.1),
-          -10px 10px 15px -1px rgba(0, 0, 0, 0.1),
-          10px 10px 15px -1px rgba(0, 0, 0, 0.1);
-      }
-
       a {
         text-decoration: none;
-        color: rgb(19, 42, 59);
-        font-weight: 500;
       }
 
-      /* ========= Header section start ========= */
-      nav.nav-bar {
+      nav {
         display: flex;
-        justify-content: center;
         justify-content: space-between;
         align-items: center;
+        height: 115px;
+        padding: 2rem 4rem;
       }
 
-      .header {
-        margin-bottom: 3rem;
+      nav img.logo {
+        width: 3rem;
       }
 
-      ul {
-        display: inline-flex;
-        grid-gap: 2rem;
+      .menu-web {
+        display: flex;
+        justify-content: space-between;
+        gap: 1.5rem;
       }
 
-      .menus {
-        list-style-type: none;
-      }
-
-      ul li {
-        text-decoration: none;
-        list-style: none;
-        /* font-size: 0.8rem; */
-        /* font-weight: 900; */
-        color: rgb(82, 76, 78);
-      }
-
-      .menus a {
-        text-decoration: none;
-        color: #524c4e;
-      }
-
-      .menus a:hover {
-        color: #2c86d9;
-        cursor: pointer;
+      .menu-web a {
+        color: #132a3b;
       }
 
       .btn {
-        display: inline-block;
-        color: #ffffff;
-        background-color: #2c86d9;
-        border-radius: 100px;
-        padding: 1rem 2rem;
-        display: inline-flex;
-        gap: 0.5rem;
-        align-items: center;
-      }
-
-      .outline {
-        background-color: transparent;
+        border: 1px solid #2c86d9;
+        padding: 12px 24px;
+        border-radius: 25px;
         color: #2c86d9;
-        border: 2px solid #2c86d9;
+        display: inline-flex;
+        gap: 8px;
       }
 
-      .btn-mobile {
+      nav .menu-mobile {
+        padding: 0 8px;
+        cursor: pointer;
         display: none;
       }
 
-      /* ========= Header section end ========= */
-
-      /* ========= hero section start ========= */
       .hero {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        justify-items: center;
+        justify-content: space-between;
         align-items: center;
-        gap: 2rem;
+        padding: 4rem;
       }
 
-      .hero img {
-        max-width: 100%;
+      .hero-image {
+        width: 100%;
       }
 
-      /* .hero.content {
-        display: block;
-        text-align: start;
-      } */
+      .hero-text {
+        padding-right: 2rem;
+      }
 
-      p.accent {
+      .tagline {
         text-transform: uppercase;
+        color: #06c78c;
         font-weight: 700;
-        color: rgb(63, 212, 166);
+        font-size: 12px;
+        letter-spacing: 1px;
+        margin-bottom: 1rem;
       }
 
       h1 {
-        font-size: 3.1rem;
-        line-height: 1.2;
-        letter-spacing: -2px;
-        margin: 0.5rem 0 3rem;
+        font-size: 2.2rem;
+        line-height: 1.3;
+        color: #132a3b;
       }
 
-      h2 {
-        font-size: 1.2rem;
-        font-weight: 400;
-        line-height: 1.5;
-        margin-bottom: 3rem;
-        color: rgba(19, 42, 59, 0.8);
+      .description {
+        margin: 2rem 0;
+        color: #132a3b9f;
       }
-      /* ========= Hero section end ========= */
 
-      /* ========= Mobile version start ========= */
+      .fill {
+        background-color: #2c86d9;
+        color: white;
+      }
 
-      @media screen and (max-width: 950px) {
-        div.menus,
-        a.btn.outline {
+      @media (max-width: 600px) {
+        nav {
+          padding: 0;
+        }
+
+        .menu-web,
+        .btn-web {
           display: none;
         }
 
-        div.header {
-          display: flex;
-          justify-content: center;
-          justify-content: space-between;
-          align-items: center;
-        }
-
-        .btn-mobile {
-          display: inline-block;
-        }
-
-        img.brand-logo {
-          max-width: 3rem;
+        nav .menu-mobile {
+          display: block;
         }
 
         .hero {
           grid-template-columns: 1fr;
+          padding: 1rem;
         }
 
-        #hero-illustration {
+        .hero-image {
           order: -1;
+          margin-bottom: 2rem;
         }
 
         h1 {
-          font-size: 2.5rem;
-          line-height: 1;
-          margin: 0rem 0 2rem;
-        }
-
-        h2 {
-          font-size: 1.1rem;
-          line-height: 1.2;
-          margin-bottom: 2rem;
+          font-size: 2rem;
+          line-height: 1.3;
         }
       }
-
-      /* ========= Mobile version end ========= */
     </style>
   </head>
   <body class="flip">
     <section class="learn">
       <!-- Practice area start -->
-
-      <div class="container">
-        <div class="header">
-          <nav class="nav-bar">
-            <div class="brand">
-              <a href="#"
-                ><img
-                  class="brand-logo"
-                  src="images/hero/logo-wally.svg"
-                  alt="brand-logo-wally"
-              /></a>
-            </div>
-            <div class="menus">
-              <ul>
-                <li><a href="">Discover Wally</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Contact</a></li>
-              </ul>
-            </div>
-            <a href="#" class="btn outline">
-              Start Now
-              <img
-                src="images/hero/arrow-right-color.svg"
-                alt="arrow-right-color"
-              />
-            </a>
-          </nav>
-          <a href="#" class="btn-mobile">
-            <img src="images/hero/menu-dots.svg" alt="mobile-menu" />
-          </a>
+      <nav>
+        <img class="logo" src="images/hero/logo-wally.svg" alt="logo-wally" />
+        <div class="menu-web">
+          <a href="#">Discover Wally</a>
+          <a href="#">Pricing</a>
+          <a href="#">About Us</a>
+          <a href="#">Contact</a>
         </div>
+        <a class="btn btn-web" href="#"
+          >Start Now
+          <img src="images/hero/arrow-right-color.svg" alt="arrow-color"
+        /></a>
+        <a class="menu-mobile" href="#"
+          ><img src="images/hero/menu-dots.svg" alt="menu-dots"
+        /></a>
+      </nav>
 
-        <section class="hero">
-          <div class="content">
-            <p class="accent">shopping made easy</p>
-            <h1>create your digital wallet in just a few clicks</h1>
-            <h2>
-              Add your cards and pay with your phone everywhere. Convenience is
-              the key
-            </h2>
-            <a class="btn" href="#">
-              Buy it now
-              <img
-                src="images/hero/arrow-right-white.svg"
-                alt=""
-                arrow-right-white
-            /></a>
-          </div>
-          <img
-            src="images/hero/illustration.svg"
-            id="hero-illustration"
-            alt="hero-illustration"
-          />
-        </section>
-      </div>
-
-      <!-- Practice area end -->
+      <section class="hero">
+        <div class="hero-text">
+          <p class="tagline">shopping made easy</p>
+          <h1>Create your digital wallet in just a few clicks.</h1>
+          <p class="description">
+            Add your card and pay with your phone anywhere. Convenience is the
+            key.
+          </p>
+          <a class="btn fill" href="#"
+            >Buy it now
+            <img
+              src="images/hero/arrow-right-white.svg"
+              alt="arrow-right-white"
+          /></a>
+        </div>
+        <img
+          src="images/hero/illustration.svg"
+          alt="hero-illustrator"
+          class="hero-image"
+        />
+      </section>
     </section>
 
     <section class="preview" data-content="Hero">
