fix sub-menu menu.html

--- a/adipurdila/menu.html
+++ b/adipurdila/menu.html
@@ -80,6 +80,10 @@
         padding: 1.5rem 3rem;
         margin-top: 1rem;
       }
+
+      .link-media li:last-child {
+        margin-bottom: 0;
+      }
     </style>
   </head>
   <body>
