--- a/adipurdila/order-form.html
+++ b/adipurdila/order-form.html
@@ -26,12 +26,12 @@
         color: #132a3b;
       }
 
-      label{
+      label {
         display: block;
       }
 
       input#sign-up,
-      .sign-up-section label{
+      .sign-up-section label {
         display: inline-block;
       }
 
@@ -47,6 +47,7 @@
       }
     </style>
   </head>
+
   <body class="flip">
     <section class="learn">
       <!-- Practice area start -->
@@ -129,6 +130,7 @@
           <!-- row-4 start -->
           <div class="row-4">
             <label>What colours sample should we send you?</label>
+
             <div class="colors-option">
               <label for="colors-white">
                 <input
@@ -138,15 +140,16 @@
                   value="white"
                 />White
               </label>
+
               <label for="colors-magenta">
                 <input
                   type="checkbox"
                   name="colors-magenta"
                   id="colors-magenta"
                   value="magenta"
-                />
-                Magenta
+                />Magenta
               </label>
+
               <label for="colors-coral">
                 <input
                   type="checkbox"
@@ -156,6 +159,7 @@
                 />
                 Coral
               </label>
+
               <label for="colors-burgundy">
                 <input
                   type="checkbox"
@@ -165,6 +169,7 @@
                 />
                 Burgundy
               </label>
+
               <label for="colors-Charcoal">
                 <input
                   type="checkbox"
@@ -176,67 +181,69 @@
               </label>
             </div>
           </div>
-            <!-- row-5 start -->
-            <div class="row-5">
-              <label>How large is your team?</label>
-              <div class="team-option">
-                <label for="small-team">
-                  <input
-                    type="radio"
-                    name="small-team"
-                    id="small-team"
-                    value="1-5 people"
-                  />
-                  1-5 People
-                </label>
-                <label for="middle-team">
-                  <input
-                    type="radio"
-                    name="middle-team"
-                    id="middle-team"
-                    value="6-10 people"
-                  />
-                  6-10 People
-                </label>
-                <label for="big-team">
-                  <input
-                    type="radio"
-                    name="big-team"
-                    id="big-team"
-                    value="10+ people"
-                  />
-                  10+ People
-                </label>
-              </div>
-            </div>
 
-              <!-- comment start -->
-              <div class="comment">
-                <label for="order-comment">
-                  Comment
-                </label>
-                  <textarea
-                    name="order-comment"
-                    id="order-comment"
-                    cols="30"
-                    rows="10"
-                  ></textarea>
-              </div>
-            </div>
+          <!-- row-5 start -->
+          <div class="row-5">
+            <label>How large is your team?</label>
 
-            <!-- remember and button order -->
-            <div class="row-button">
-              <div class="sign-up-section">
+            <div class="team-option">
+              <label for="small-team">
                 <input
-                  type="checkbox"
-                  id="sign-up"
-                  name="sign-up"
-                  value="sign-up"
+                  type="radio"
+                  name="small-team"
+                  id="small-team"
+                  value="1-5 people"
                 />
-                <label for="sign-up">Sign up for special offers</label>
-              </div>
-              <div class="btn">Place Order</div>
+                1-5 People
+              </label>
+
+              <label for="middle-team">
+                <input
+                  type="radio"
+                  name="middle-team"
+                  id="middle-team"
+                  value="6-10 people"
+                />
+                6-10 People
+              </label>
+
+              <label for="big-team">
+                <input
+                  type="radio"
+                  name="big-team"
+                  id="big-team"
+                  value="10+ people"
+                />
+                10+ People
+              </label>
             </div>
+          </div>
+
+          <!-- comment start -->
+          <div class="comment">
+            <label for="order-comment"> Comment </label>
+
+            <textarea
+              name="order-comment"
+              id="order-comment"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+
+          <!-- remember and button order -->
+          <div class="row-button">
+            <div class="sign-up-section">
+              <input
+                type="checkbox"
+                id="sign-up"
+                name="sign-up"
+                value="sign-up"
+              />
+              <label for="sign-up">Sign up for special offers</label>
+            </div>
+
+            <button class="btn">Place Order</button>
           </div>
         </form>
       </div>
