--- a/adipurdila/order-form.html
+++ b/adipurdila/order-form.html
@@ -16,34 +16,61 @@
     />
 
     <style>
-      * {
+      *,
+      *::before,
+      *::after {
         font-family: "Poppins";
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      .learn {
+        background-color: #f7f8f8;
+        display: flex;
+        justify-content: center;
+      }
+
+      .card {
+        width: 840px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0px 3px 10px 1px rgba(0, 0, 0, 0.1);
+        padding: 3rem;
       }
 
       h1 {
         font-size: 2rem;
         font-weight: 900;
         color: #132a3b;
+        margin-bottom: 3rem;
+      }
+
+      form {
+        width: 100%;
       }
 
       label {
         display: block;
       }
 
-      input#sign-up,
-      .sign-up-section label {
-        display: inline-block;
+      form .row-1,
+      form .row-2,
+      form .row-3 {
+        display: flex;
+        justify-content: space-between;
+        gap: 1rem;
       }
 
-      .row-1,
-      .row-2,
-      .row-3,
-      .row-4,
-      .row-comment,
-      .row-button,
-      .team-option,
-      .colors-option {
-        display: flex;
+      .row-1 .input-box,
+      .row-2 .input-box,
+      .row-3 .input-box {
+        width: 100%;
+      }
+
+      .input-box input,
+      .input-box select {
+        width: 100%;
       }
     </style>
   </head>
@@ -57,7 +84,7 @@
         <form action="#" method="post">
           <!-- row-1 start -->
           <div class="row-1">
-            <div>
+            <div class="input-box">
               <label for="order-name">Name</label>
               <input
                 type="text"
@@ -67,7 +94,7 @@
               />
             </div>
 
-            <div>
+            <div class="input-box">
               <label for="order-email">Email address</label>
               <input
                 type="text"
@@ -79,30 +106,32 @@
           </div>
 
           <!-- row-2 start -->
-          <div class="row-2">
-            <div>
-              <label for="order-address">Address</label>
-              <input
-                type="text"
-                name="order-address"
-                id="order-address"
-                placeholder="9 August Street"
-              />
-            </div>
+          <div>
+            <label for="order-address">Address</label>
 
-            <div>
-              <input
-                type="text"
-                name="order-address"
-                id="order-address"
-                placeholder="Suite 122"
-              />
+            <div class="row-2">
+              <div class="input-box">
+                <input
+                  type="text"
+                  name="order-address-street"
+                  id="order-address"
+                  placeholder="9 August Street"
+                />
+              </div>
+              <div class="input-box">
+                <input
+                  type="text"
+                  name="order-address-number"
+                  id="order-address"
+                  placeholder="Suite 122"
+                />
+              </div>
             </div>
           </div>
 
           <!-- row-3 start -->
           <div class="row-3">
-            <div>
+            <div class="input-box">
               <label for="order-city">City</label>
               <input
                 type="text"
@@ -112,7 +141,7 @@
               />
             </div>
 
-            <div>
+            <div class="input-box">
               <label for="order-state">State</label>
               <select name="order-state" id="order-state">
                 <option value="Alabama">Alabama</option>
@@ -121,7 +150,7 @@
               </select>
             </div>
 
-            <div>
+            <div class="input-box">
               <label for="order-zip">ZIP</label>
               <input type="number" for="order-zip" id="order-zip" />
             </div>
